@@ -1,7 +1,7 @@
 package com.bayer.bhc.doc41webui.integration.sap.rfc;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -10,11 +10,10 @@ import com.bayer.bhc.doc41webui.integration.sap.util.SAPException;
 import com.sap.conn.jco.JCoFunction;
 import com.sap.conn.jco.JCoParameterList;
 
-public class GetDocUrlRFC extends AbstractDoc41RFC<URL>{
-	//TODO
+public class GetDocUrlRFC extends AbstractDoc41RFC<URI>{
 	private static final String IN_CREP_ID = "IV_CREP_ID";
 	private static final String IN_DOC_ID = "IV_DOC_ID";
-	private static final String IN_COMP_ID = "IV_COMP_ID";
+//	private static final String IN_COMP_ID = "IV_COMP_ID";
 	
 	private static final String OUT_URL = "EV_URL";
 //	private static final String OUT_DOC_ID_OUT = "EV_DOC_ID_OUT";
@@ -30,13 +29,13 @@ public class GetDocUrlRFC extends AbstractDoc41RFC<URL>{
             if (pInputParms != null) {
             	String crepId = (String) pInputParms.get(0);
                 String docId = (String) pInputParms.get(1);
-                String compId = (String) pInputParms.get(2);
+//                String compId = (String) pInputParms.get(2);
                 
                 JCoParameterList sapInput = pFunction.getImportParameterList();
 				
 				sapInput.setValue(IN_CREP_ID,crepId);
 				sapInput.setValue(IN_DOC_ID,docId);
-				sapInput.setValue(IN_COMP_ID,compId);
+//				sapInput.setValue(IN_COMP_ID,compId);
             } else {
                 throw new SAPException(
                         "GetDocUrlRFC pInputParms list is null", null);
@@ -49,20 +48,20 @@ public class GetDocUrlRFC extends AbstractDoc41RFC<URL>{
 	}
 
 	@Override
-	public List<URL> processResult(JCoFunction pFunction)
+	public List<URI> processResult(JCoFunction pFunction)
 			throws SAPException {
 		try{
 			Doc41Log.get().debug(GetDocUrlRFC.class, null, "processResult():ENTRY");
-			ArrayList<URL> mResult = new ArrayList<URL>();
+			ArrayList<URI> mResult = new ArrayList<URI>();
 			if (pFunction != null) {
 				processReturnTable(pFunction);
 				JCoParameterList exportParameterList = pFunction.getExportParameterList();
-				mResult.add(new URL(exportParameterList.getString(OUT_URL)));
+				mResult.add(new URI(exportParameterList.getString(OUT_URL)));
 			}
 			Doc41Log.get().debug(GetDocUrlRFC.class, null, "processResult():EXIT");
 			return mResult;
-		} catch (MalformedURLException e) {
-			throw new SAPException("invalid URL", e);
+		} catch (URISyntaxException e) {
+			throw new SAPException("invalid URi", e);
 		}
 	}
 
